--- a/main_marc.ipynb
+++ b/main_marc.ipynb
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -483,13 +483,9 @@
     "# Check XGBoost version\n",
     "print(\"XGBoost version:\", xgb.__version__)\n",
     "\n",
-    "# Check if the GPU is available\n",
-    "try:\n",
-    "    # Check if GPU is available by using a Booster's attributes\n",
-    "    booster = xgb.Booster()\n",
-    "    print(\"GPU available:\", booster.attributes().get('gpu_id') is not None)\n",
-    "except Exception as e:\n",
-    "    print(f\"Error: {e}\")\n"
+    "# Check if GPU is available\n",
+    "booster = xgb.Booster()\n",
+    "print(\"GPU available:\", booster.attributes().get('gpu_id') is not None)\n"
    ]
   }
  ],
