--- a/main_marc.ipynb
+++ b/main_marc.ipynb
@@ -418,74 +418,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import xgboost as xgb\n",
-    "import numpy as np\n",
-    "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "# Convert the data to DMatrix (XGBoost’s internal data structure)\n",
-    "dtrain = xgb.DMatrix(X_train, label=y_train)\n",
-    "dtest = xgb.DMatrix(X_test, label=y_test)\n",
-    "\n",
-    "# Set the parameters for GPU-based training (updated)\n",
-    "params = {\n",
-    "    'objective': 'reg:squarederror',  # Regression task\n",
-    "    'eval_metric': 'rmse',  # Evaluation metric\n",
-    "    'tree_method': 'hist',  # Use histogram-based algorithm (compatible with GPU)\n",
-    "    'device': 'cuda',  # Use GPU (CUDA)\n",
-    "    'learning_rate': 0.1,  # Adjust based on dataset size\n",
-    "    'max_depth': 6,  # Reasonable default, tune based on dataset\n",
-    "    'subsample': 0.8,  # Helps prevent overfitting\n",
-    "    'colsample_bytree': 0.8,  # Feature selection per tree\n",
-    "}\n",
-    "\n",
-    "# Train the model with early stopping\n",
-    "evals = [(dtrain, 'train'), (dtest, 'eval')]\n",
-    "bst = xgb.train(params, dtrain, num_boost_round=1000, evals=evals, early_stopping_rounds=10, verbose_eval=10)\n",
-    "\n",
-    "# Make predictions\n",
-    "predictions = bst.predict(dtest)\n",
-    "\n",
-    "# Evaluate the model’s performance\n",
-    "r2 = r2_score(y_test, predictions)\n",
-    "rmse = np.sqrt(mean_squared_error(y_test, predictions))\n",
-    "mae = mean_absolute_error(y_test, predictions)\n",
-    "mse_value = mean_squared_error(y_test, predictions)\n",
-    "\n",
-    "# Evaluation metrics\n",
-    "print(\"R² = \", round(r2, 4))\n",
-    "print(\"RMSE = \", round(rmse, 4))\n",
-    "print(\"MAE = \", round(mae, 4))\n",
-    "print(\"MSE =  \", round(mse_value, 4))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XGBoost version: 2.1.2\n",
-      "GPU available: False\n"
+      "[0]\ttrain-rmse:233887.99668\teval-rmse:237008.04722\n",
+      "[10]\ttrain-rmse:123535.91472\teval-rmse:129652.99821\n",
+      "[20]\ttrain-rmse:88719.81347\teval-rmse:97503.49799\n",
+      "[30]\ttrain-rmse:78188.02048\teval-rmse:88718.94414\n",
+      "[40]\ttrain-rmse:73099.15638\teval-rmse:84932.15627\n",
+      "[50]\ttrain-rmse:70031.81082\teval-rmse:83472.95334\n",
+      "[60]\ttrain-rmse:67720.50429\teval-rmse:82489.81498\n",
+      "[70]\ttrain-rmse:65760.12483\teval-rmse:81732.97511\n",
+      "[80]\ttrain-rmse:63991.05514\teval-rmse:81285.35163\n",
+      "[90]\ttrain-rmse:62387.61286\teval-rmse:80885.83876\n",
+      "[100]\ttrain-rmse:60888.38966\teval-rmse:80466.58522\n",
+      "[110]\ttrain-rmse:59769.83021\teval-rmse:80195.42639\n",
+      "[120]\ttrain-rmse:58395.17761\teval-rmse:79901.42191\n",
+      "[130]\ttrain-rmse:57192.06667\teval-rmse:79662.10928\n",
+      "[140]\ttrain-rmse:56146.06852\teval-rmse:79449.03528\n",
+      "[150]\ttrain-rmse:55053.33963\teval-rmse:79339.15338\n",
+      "[160]\ttrain-rmse:53982.46754\teval-rmse:79263.22768\n",
+      "[170]\ttrain-rmse:52860.33589\teval-rmse:79142.80089\n",
+      "[180]\ttrain-rmse:51931.93513\teval-rmse:79081.56340\n",
+      "[190]\ttrain-rmse:51060.67302\teval-rmse:79026.68446\n",
+      "[199]\ttrain-rmse:50338.04646\teval-rmse:79087.52599\n",
+      "R² =  0.9025\n",
+      "RMSE =  79087.526\n",
+      "MAE =  54045.8367\n",
+      "MSE =   6254836769.8934\n"
      ]
     }
    ],
    "source": [
     "import xgboost as xgb\n",
+    "import numpy as np\n",
+    "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# Check XGBoost version\n",
-    "print(\"XGBoost version:\", xgb.__version__)\n",
+    "# Convert data to DMatrix:\n",
+    "dtrain = xgb.DMatrix(X_train, label=y_train)\n",
+    "dtest = xgb.DMatrix(X_test, label=y_test)\n",
     "\n",
-    "# Check if GPU is available\n",
-    "booster = xgb.Booster()\n",
-    "print(\"GPU available:\", booster.attributes().get('gpu_id') is not None)\n"
+    "# Set parameters for training:\n",
+    "params = {\n",
+    "    'objective': 'reg:squarederror',  # Regression task.\n",
+    "    'eval_metric': 'rmse',  # Evaluation metric.\n",
+    "    'tree_method': 'auto',  # Default tree method.\n",
+    "    'learning_rate': 0.1,\n",
+    "    'max_depth': 6,\n",
+    "    'subsample': 0.8,\n",
+    "    'colsample_bytree': 0.8,\n",
+    "}\n",
+    "\n",
+    "# Train model with early stopping:\n",
+    "evals = [(dtrain, 'train'), (dtest, 'eval')]\n",
+    "bst = xgb.train(params, dtrain, num_boost_round=1000, evals=evals, early_stopping_rounds=10, verbose_eval=10)\n",
+    "\n",
+    "# Make predictions:\n",
+    "predictions = bst.predict(dtest)\n",
+    "\n",
+    "# Evaluate model’s performance:\n",
+    "r2 = r2_score(y_test, predictions)\n",
+    "rmse = np.sqrt(mean_squared_error(y_test, predictions))\n",
+    "mae = mean_absolute_error(y_test, predictions)\n",
+    "mse_value = mean_squared_error(y_test, predictions)\n",
+    "\n",
+    "# Evaluation metrics:\n",
+    "print(\"R² = \", round(r2, 4))\n",
+    "print(\"RMSE = \", round(rmse, 4))\n",
+    "print(\"MAE = \", round(mae, 4))\n",
+    "print(\"MSE =  \", round(mse_value, 4))\n"
    ]
   }
  ],
