--- a/main_marc.ipynb
+++ b/main_marc.ipynb
@@ -127,30 +127,7 @@
       "long             0\n",
       "sqft_living15    0\n",
       "sqft_lot15       0\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "df = pd.read_csv('data/king_country_houses.csv')\n",
-    "\n",
-    "print(df.head())\n",
-    "print(df.info())\n",
-    "print(df.describe())\n",
-    "print(df.isnull().sum())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "dtype: int64\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 21613 entries, 0 to 21612\n",
       "Data columns (total 21 columns):\n",
@@ -179,38 +156,7 @@
       " 20  sqft_lot15     21613 non-null  int64         \n",
       "dtypes: datetime64[ns](1), float64(5), int64(15)\n",
       "memory usage: 3.5 MB\n",
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# Load DF:\n",
-    "df = pd.read_csv('data/king_country_houses.csv')\n",
-    "\n",
-    "# Handle missing values:\n",
-    "df = df.dropna(subset=['price'])\n",
-    "\n",
-    "# Remove duplicate rows:\n",
-    "df = df.drop_duplicates()\n",
-    "\n",
-    "# Convert 'date' column to datetime:\n",
-    "df['date'] = pd.to_datetime(df['date'], format='%Y%m%dT%H%M%S')\n",
-    "\n",
-    "# Check data:\n",
-    "print(df.info())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "None\n",
       "price            1.000000\n",
       "sqft_living      0.702035\n",
       "grade            0.667434\n",
@@ -237,14 +183,39 @@
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load DF:\n",
+    "df = pd.read_csv('data/king_country_houses.csv')\n",
+    "\n",
+    "# Initial check:\n",
+    "print(df.head())\n",
+    "print(df.info())\n",
+    "print(df.describe())\n",
+    "print(df.isnull().sum())\n",
+    "\n",
+    "# Handle missing values:\n",
+    "df = df.dropna(subset=['price'])\n",
+    "\n",
+    "# Remove duplicate rows:\n",
+    "df = df.drop_duplicates()\n",
+    "\n",
+    "# Convert 'date' column to datetime:\n",
+    "df['date'] = pd.to_datetime(df['date'], format='%Y%m%dT%H%M%S')\n",
+    "\n",
+    "# Check data:\n",
+    "print(df.info())\n",
+    "\n",
     "# Calculate correlation between numerical features:\n",
     "correlation_matrix = df.corr()\n",
-    "print(correlation_matrix['price'].sort_values(ascending=False))\n"
+    "print(correlation_matrix['price'].sort_values(ascending=False))\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -292,10 +263,7 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "from scipy import stats\n",
     "\n",
     "\n",
@@ -351,69 +319,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R² =  0.8867\n",
-      "RMSE =  85258.4252\n",
-      "MAE =  57231.8505\n",
-      "MSE =   7268999073.8572\n"
+      "R² = 0.8867\n",
+      "RMSE = 85258.4252\n",
+      "MAE = 57231.8505\n",
+      "MSE = 7268999073.8572\n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
+    "import numpy as np\n",
     "\n",
-    "# Check for non-numeric columns:\n",
-    "non_numeric_columns = df.select_dtypes(exclude=[np.number]).columns\n",
+    "# Identify non-numeric column: \n",
+    "non_numeric_columns = df.select_dtypes(exclude=[np.number]).columns  \n",
     "\n",
-    "# Drop non-numeric columns:\n",
-    "df_cleaned = df.drop(columns=non_numeric_columns)\n",
+    "# Drop them said columns:\n",
+    "df_cleaned = df.drop(columns=non_numeric_columns)  \n",
     "\n",
-    "# Capping outliers using 5th and 95th percentiles:\n",
-    "numeric_columns = df_cleaned.select_dtypes(include=[np.number]).columns\n",
+    "# Cap outliers at 5th and 95th percentiles:\n",
+    "numeric_columns = df_cleaned.select_dtypes(include=[np.number]).columns  \n",
+    "lower_limit = df_cleaned[numeric_columns].quantile(0.05)  \n",
+    "upper_limit = df_cleaned[numeric_columns].quantile(0.95)  \n",
     "\n",
-    "# Calculate 5th and 95th percentiles for each numeric column:\n",
-    "lower_limit = df_cleaned[numeric_columns].quantile(0.05)\n",
-    "upper_limit = df_cleaned[numeric_columns].quantile(0.95)\n",
+    "# Apply capping:\n",
+    "for col in numeric_columns:  \n",
+    "    df_cleaned[col] = df_cleaned[col].clip(lower=lower_limit[col], upper=upper_limit[col])  \n",
     "\n",
-    "# Apply capping for each column:\n",
-    "for col in numeric_columns:\n",
-    "    df_cleaned[col] = df_cleaned[col].clip(lower=lower_limit[col], upper=upper_limit[col])\n",
+    "# Define X (features) and y (target):\n",
+    "X = df_cleaned.drop(\"price\", axis=1)  \n",
+    "y = df_cleaned[\"price\"]  \n",
     "\n",
-    "# Filter relevant columns for model:\n",
-    "X = df_cleaned.drop(\"price\", axis=1)\n",
-    "y = df_cleaned[\"price\"]\n",
+    "# Split data into train and test sets (70/30):\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)  \n",
     "\n",
-    "# Split data into training and testing datasets:\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "# Train Random Forest:\n",
+    "rf_model = RandomForestRegressor(n_estimators=100, random_state=42, n_jobs=-1)  \n",
+    "rf_model.fit(X_train, y_train)  \n",
     "\n",
-    "# Initialize & train Random Forest Regressor Model with parallelization:\n",
-    "rf_model = RandomForestRegressor(n_estimators=100, random_state=42, n_jobs=-1)  # n_jobs=-1 to use all CPU cores\n",
-    "rf_model.fit(X_train, y_train)\n",
+    "# Make predictions:\n",
+    "predictions = rf_model.predict(X_test)  \n",
     "\n",
-    "# Make predictions on the test dataset:\n",
-    "predictions = rf_model.predict(X_test)\n",
+    "# Evaluate performance:\n",
+    "r2 = r2_score(y_test, predictions)  \n",
+    "rmse = np.sqrt(mean_squared_error(y_test, predictions))  \n",
+    "mae = mean_absolute_error(y_test, predictions)  \n",
+    "mse_value = mean_squared_error(y_test, predictions)  \n",
     "\n",
-    "# Evaluate model's performance:\n",
-    "r2 = r2_score(y_test, predictions)\n",
-    "rmse = np.sqrt(mean_squared_error(y_test, predictions))\n",
-    "mae = mean_absolute_error(y_test, predictions)\n",
-    "mse_value = mean_squared_error(y_test, predictions)\n",
-    "\n",
-    "# Evaluation metrics:\n",
-    "print(\"R² = \", round(r2, 4))\n",
-    "print(\"RMSE = \", round(rmse, 4))\n",
-    "print(\"MAE = \", round(mae, 4))\n",
-    "print(\"MSE =  \", round(mse_value, 4))\n"
+    "# Print evaluation metrics:\n",
+    "print(\"R² =\", round(r2, 4))  \n",
+    "print(\"RMSE =\", round(rmse, 4))  \n",
+    "print(\"MAE =\", round(mae, 4))  \n",
+    "print(\"MSE =\", round(mse_value, 4))  \n"
    ]
   },
   {
@@ -425,10 +390,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R² =  0.9945\n",
-      "RMSE =  10.2309\n",
-      "MAE =  7.4232\n",
-      "MSE =   104.6714\n"
+      "R² = 0.9945\n",
+      "RMSE = 10.2309\n",
+      "MAE = 7.4232\n",
+      "MSE = 104.6714\n"
      ]
     }
    ],
@@ -440,47 +405,42 @@
     "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
     "\n",
     "# Generate synthetic regression data:\n",
-    "X, y = make_regression(n_samples=10000, n_features=5, noise=0.1, random_state=42)\n",
+    "X, y = make_regression(n_samples=10000, n_features=5, noise=0.1, random_state=42)  \n",
     "\n",
-    "# Apply outlier capping to target variable (y):\n",
-    "lower_percentile = 1\n",
-    "upper_percentile = 99\n",
+    "# Cap outliers in target (y):\n",
+    "lower_bound = np.percentile(y, 1)  \n",
+    "upper_bound = np.percentile(y, 99)  \n",
+    "y_capped = np.clip(y, lower_bound, upper_bound)  \n",
     "\n",
-    "# Calculate lower and upper bounds for capping:\n",
-    "lower_bound = np.percentile(y, lower_percentile)\n",
-    "upper_bound = np.percentile(y, upper_percentile)\n",
+    "# Split data into train (80%) and test (20%):\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y_capped, test_size=0.2, random_state=42)  \n",
     "\n",
-    "# Cap target variable within bounds:\n",
-    "y_capped = np.clip(y, lower_bound, upper_bound)\n",
+    "# Convert data into DMatrix format:\n",
+    "dtrain = xgb.DMatrix(X_train, label=y_train)  \n",
+    "dtest = xgb.DMatrix(X_test, label=y_test)  \n",
     "\n",
-    "# Split into train and test sets:\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y_capped, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Convert data to DMatrix:\n",
-    "dtrain = xgb.DMatrix(X_train, label=y_train)\n",
-    "dtest = xgb.DMatrix(X_test, label=y_test)\n",
-    "\n",
-    "# Train model:\n",
-    "bst = xgb.train({'objective': 'reg:squarederror'}, dtrain, num_boost_round=100)\n",
+    "# Train model: \n",
+    "bst = xgb.train({'objective': 'reg:squarederror'}, dtrain, num_boost_round=100)  \n",
     "\n",
     "# Make predictions:\n",
-    "predictions = bst.predict(dtest)\n",
+    "predictions = bst.predict(dtest)  \n",
     "\n",
     "# Evaluate model:\n",
-    "r2 = r2_score(y_test, predictions)\n",
-    "rmse = np.sqrt(mean_squared_error(y_test, predictions))\n",
-    "mae = mean_absolute_error(y_test, predictions)\n",
-    "mse_value = mean_squared_error(y_test, predictions)\n",
+    "r2 = r2_score(y_test, predictions)  \n",
+    "rmse = np.sqrt(mean_squared_error(y_test, predictions))  \n",
+    "mae = mean_absolute_error(y_test, predictions)  \n",
+    "mse_value = mean_squared_error(y_test, predictions)  \n",
     "\n",
-    "print(\"R² = \", round(r2, 4))\n",
-    "print(\"RMSE = \", round(rmse, 4))\n",
-    "print(\"MAE = \", round(mae, 4))\n",
-    "print(\"MSE =  \", round(mse_value, 4))\n"
+    "# Evaluation metrics:\n",
+    "print(\"R² =\", round(r2, 4))  \n",
+    "print(\"RMSE =\", round(rmse, 4))  \n",
+    "print(\"MAE =\", round(mae, 4))  \n",
+    "print(\"MSE =\", round(mse_value, 4))  \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -493,22 +453,22 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import make_scorer, mean_squared_error, root_mean_squared_error\n",
     "from xgboost import XGBRegressor\n",
+    "from sklearn.metrics import make_scorer, root_mean_squared_error\n",
     "from sklearn.model_selection import cross_val_score\n",
     "\n",
-    "# Define model:\n",
-    "model = XGBRegressor(objective='reg:squarederror', n_estimators=100, learning_rate=0.1, max_depth=6)\n",
+    "# Initialize regressor:\n",
+    "model = XGBRegressor(objective='reg:squarederror', n_estimators=100, learning_rate=0.1, max_depth=6)  \n",
     "\n",
-    "# Define scorer for RMSE:\n",
-    "scorer = make_scorer(root_mean_squared_error)\n",
+    "# Define RMSE as the scoring metric:\n",
+    "scorer = make_scorer(root_mean_squared_error)  \n",
     "\n",
-    "# Perform cross-validation:\n",
-    "cv_scores = cross_val_score(model, X_train, y_train, cv=5, scoring=scorer)\n",
+    "# Perform 5-fold cross-validation:\n",
+    "cv_scores = cross_val_score(model, X_train, y_train, cv=5, scoring=scorer)  \n",
     "\n",
-    "# Print scores:\n",
-    "print(f\"Cross-Validation RMSE Scores: {cv_scores}\")\n",
-    "print(f\"Mean Cross-Validation RMSE: {cv_scores.mean()}\")\n"
+    "# Results:\n",
+    "print(f\"Cross-Validation RMSE Scores: {cv_scores}\")  \n",
+    "print(f\"Mean Cross-Validation RMSE: {cv_scores.mean()}\")  \n"
    ]
   }
  ],
