--- a/main.ipynb
+++ b/main.ipynb
@@ -2,17 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.append('/opt/anaconda3/lib/python3.12/site-packages')\n",
-    "import kagglehub\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -23,7 +12,19 @@
       "c:\\Users\\Mirko\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.path.append('/opt/anaconda3/lib/python3.12/site-packages')\n",
+    "import kagglehub\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +75,7 @@
        "'c:\\\\Data_Science\\\\IH_Notebooks\\\\IronKaggle_project'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +470,7 @@
        "[21613 rows x 21 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +529,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +570,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +930,7 @@
        "[21613 rows x 19 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +971,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1001,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1010,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1071,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1498,7 +1499,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1510,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1937,7 +1938,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1949,7 +1950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1960,7 +1961,7 @@
        "      shape=(6484,))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1972,7 +1973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2078,7 +2079,7 @@
        "[6484 rows x 2 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2090,7 +2091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2208,7 +2209,7 @@
        "[6484 rows x 3 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2222,7 +2223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2262,7 +2263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2271,7 +2272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2324,7 +2325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2365,7 +2366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2556,7 +2557,7 @@
        "[21613 rows x 8 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2571,7 +2572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2580,7 +2581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -3007,7 +3008,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3019,7 +3020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -3030,7 +3031,7 @@
        "      shape=(6484,))"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3042,7 +3043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -3148,7 +3149,7 @@
        "[6484 rows x 2 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3160,7 +3161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -3278,7 +3279,7 @@
        "[6484 rows x 3 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3290,7 +3291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -3329,7 +3330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -3629,7 +3630,7 @@
        "[21613 rows x 16 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3655,7 +3656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3664,7 +3665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3952,7 +3953,7 @@
        "[21613 rows x 15 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3963,7 +3964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3972,7 +3973,7 @@
        "<Axes: ylabel='price'>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4002,16 +4003,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x2042acc9e80>"
+       "<seaborn.axisgrid.FacetGrid at 0x1c1587f9be0>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4032,7 +4033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4050,7 +4051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4066,7 +4067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -4076,7 +4077,7 @@
        "        480625.12], shape=(6484,), dtype=float32)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4087,7 +4088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -4193,7 +4194,7 @@
        "[6484 rows x 2 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4205,7 +4206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -4323,7 +4324,7 @@
        "[6484 rows x 3 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4335,7 +4336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -4349,7 +4350,7 @@
     }
    ],
    "source": [
-    "#metrics of the baseline model\n",
+    "\n",
     "\n",
     "r2_xgb= r2_score(y_test, predictions_xgb)\n",
     "RMSE_xgb = mean_squared_error(y_test, predictions_xgb)\n",
@@ -4363,17 +4364,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 308000., 1020000.,  989990., ...,  210000., 1400000.,  465000.],\n",
+       "array([ 360000.,  665000., 1225000., ...,  210000., 1350000.,  487600.],\n",
        "      shape=(6484,))"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4394,7 +4395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -4426,27 +4427,27 @@
        "    <tr>\n",
        "      <th>735</th>\n",
        "      <td>365000.0</td>\n",
-       "      <td>308000.0</td>\n",
+       "      <td>360000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2830</th>\n",
        "      <td>865000.0</td>\n",
-       "      <td>1020000.0</td>\n",
+       "      <td>665000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4106</th>\n",
        "      <td>1038000.0</td>\n",
-       "      <td>989990.0</td>\n",
+       "      <td>1225000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16218</th>\n",
        "      <td>1490000.0</td>\n",
-       "      <td>1360000.0</td>\n",
+       "      <td>1580000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19964</th>\n",
        "      <td>711000.0</td>\n",
-       "      <td>775000.0</td>\n",
+       "      <td>435000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -4456,12 +4457,12 @@
        "    <tr>\n",
        "      <th>12606</th>\n",
        "      <td>412000.0</td>\n",
-       "      <td>375000.0</td>\n",
+       "      <td>349950.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14393</th>\n",
        "      <td>760000.0</td>\n",
-       "      <td>625000.0</td>\n",
+       "      <td>740000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6899</th>\n",
@@ -4471,12 +4472,12 @@
        "    <tr>\n",
        "      <th>85</th>\n",
        "      <td>940000.0</td>\n",
-       "      <td>1400000.0</td>\n",
+       "      <td>1350000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21363</th>\n",
        "      <td>410000.0</td>\n",
-       "      <td>465000.0</td>\n",
+       "      <td>487600.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4485,22 +4486,22 @@
       ],
       "text/plain": [
        "          actual       pred\n",
-       "735     365000.0   308000.0\n",
-       "2830    865000.0  1020000.0\n",
-       "4106   1038000.0   989990.0\n",
-       "16218  1490000.0  1360000.0\n",
-       "19964   711000.0   775000.0\n",
+       "735     365000.0   360000.0\n",
+       "2830    865000.0   665000.0\n",
+       "4106   1038000.0  1225000.0\n",
+       "16218  1490000.0  1580000.0\n",
+       "19964   711000.0   435000.0\n",
        "...          ...        ...\n",
-       "12606   412000.0   375000.0\n",
-       "14393   760000.0   625000.0\n",
+       "12606   412000.0   349950.0\n",
+       "14393   760000.0   740000.0\n",
        "6899    410500.0   210000.0\n",
-       "85      940000.0  1400000.0\n",
-       "21363   410000.0   465000.0\n",
+       "85      940000.0  1350000.0\n",
+       "21363   410000.0   487600.0\n",
        "\n",
        "[6484 rows x 2 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4516,23 +4517,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 =  0.86\n",
-      "RMSE =  19524162300.05\n",
-      "MAE =  72134.14\n"
+      "R2 =  0.61\n",
+      "RMSE =  56337960466.79\n",
+      "MAE =  117708.59\n"
      ]
     }
    ],
    "source": [
-    "r2_tree= r2_score(y_test, predictions_xgb)\n",
-    "RMSE_tree = mean_squared_error(y_test, predictions_xgb)\n",
-    "MAE_tree = mean_absolute_error(y_test, predictions_xgb)\n",
+    "r2_tree= r2_score(y_test, tree_pred)\n",
+    "RMSE_tree = mean_squared_error(y_test, tree_pred)\n",
+    "MAE_tree = mean_absolute_error(y_test, tree_pred)\n",
     "\n",
     "#Printing the results\n",
     "print(\"R2 = \", round(r2_tree, 2))\n",
