--- a/main_marc.ipynb
+++ b/main_marc.ipynb
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -357,9 +357,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R² = 0.8871\n",
+      "RMSE = 85111.0498\n",
+      "MAE = 57142.9239\n",
+      "MSE = 7243890804.6255\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
@@ -410,9 +421,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R² = 0.9941\n",
+      "RMSE = 8.6931\n",
+      "MAE = 6.3539\n",
+      "MSE = 75.5693\n"
+     ]
+    }
+   ],
    "source": [
     "import xgboost as xgb\n",
     "import numpy as np\n",
@@ -424,8 +446,8 @@
     "X, y = make_regression(n_samples=10000, n_features=5, noise=0.1, random_state=42)  \n",
     "\n",
     "# Cap outliers in target (y):\n",
-    "lower_bound = np.percentile(y, 1)  \n",
-    "upper_bound = np.percentile(y, 99)  \n",
+    "lower_bound = np.percentile(y, 10)  \n",
+    "upper_bound = np.percentile(y, 90)  \n",
     "y_capped = np.clip(y, lower_bound, upper_bound)  \n",
     "\n",
     "# Split data into train (80%) and test (20%):\n",
@@ -456,9 +478,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-Validation RMSE Scores: [7.62387532 8.48389226 7.88998129 8.18427953 7.74694593]\n",
+      "Mean Cross-Validation RMSE: 7.985794867160695\n"
+     ]
+    }
+   ],
    "source": [
     "from xgboost import XGBRegressor\n",
     "from sklearn.metrics import make_scorer, root_mean_squared_error\n",
