--- a/main_marc.ipynb
+++ b/main_marc.ipynb
@@ -206,7 +206,7 @@
     "# Check data:\n",
     "print(df.info())\n",
     "\n",
-    "# Calculate correlation between numerical features:\n",
+    "# Calculate correlation matrix:\n",
     "correlation_matrix = df.corr()\n",
     "print(correlation_matrix['price'].sort_values(ascending=False))\n",
     "\n",
@@ -276,10 +276,10 @@
     }
    ],
    "source": [
-    "# Drop the selected features\n",
+    "# Drop selected features:\n",
     "df = df.drop(columns=['id', 'date', 'zipcode', 'sqft_above', 'sqft_basement'])\n",
     "\n",
-    "# Recalculate the correlation matrix to check for any changes\n",
+    "# Recalculate correlation matrix:\n",
     "correlation_matrix = df.corr()\n",
     "print(correlation_matrix['price'].sort_values(ascending=False))\n"
    ]
@@ -375,7 +375,6 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
-    "import numpy as np\n",
     "\n",
     "# Identify non-numeric column: \n",
     "non_numeric_columns = df.select_dtypes(exclude=[np.number]).columns  \n",
@@ -421,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +436,6 @@
    ],
    "source": [
     "import xgboost as xgb\n",
-    "import numpy as np\n",
     "from sklearn.datasets import make_regression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
@@ -478,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
