--- a/main.ipynb
+++ b/main.ipynb
@@ -211,9 +211,7 @@
     "\n",
     "# Calculate correlation matrix:\n",
     "correlation_matrix = df.corr()\n",
-    "print(correlation_matrix['price'].sort_values(ascending=False))\n",
-    "\n",
-    "\n"
+    "print(correlation_matrix['price'].sort_values(ascending=False))"
    ]
   },
   {
@@ -281,7 +279,7 @@
     "plt.figure(figsize=(12, 8))\n",
     "sns.heatmap(correlation_matrix[['price']].sort_values(by='price', ascending=False), annot=True, cmap='coolwarm', fmt=\".2f\")\n",
     "plt.title('Correlation of Features with Price')\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -311,7 +309,7 @@
     "plt.figure(figsize=(12, 8))\n",
     "sns.heatmap(correlation_matrix[['price']].sort_values(by='price', ascending=False), annot=True, cmap='coolwarm', fmt=\".2f\")\n",
     "plt.title('Correlation of Features with Price')\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -421,7 +419,7 @@
     "# Apply functions:\n",
     "visualize_outliers(df)  # Visualize boxplots and histograms.\n",
     "z_outliers = z_score_outliers(df)  # Detect outliers using Z-score.\n",
-    "iqr_outliers = iqr_outliers(df)  # Detect outliers using IQR.\n"
+    "iqr_outliers = iqr_outliers(df)  # Detect outliers using IQR."
    ]
   },
   {
@@ -484,7 +482,7 @@
     "print(\"R² =\", round(r2, 4))  \n",
     "print(\"RMSE =\", round(rmse, 4))  \n",
     "print(\"MAE =\", round(mae, 4))  \n",
-    "print(\"MSE =\", round(mse_value, 4))  \n"
+    "print(\"MSE =\", round(mse_value, 4))"
    ]
   },
   {
@@ -540,7 +538,7 @@
     "print(\"R² =\", round(r2, 4))  \n",
     "print(\"RMSE =\", round(rmse, 4))  \n",
     "print(\"MAE =\", round(mae, 4))  \n",
-    "print(\"MSE =\", round(mse_value, 4))  \n"
+    "print(\"MSE =\", round(mse_value, 4))"
    ]
   },
   {
@@ -573,7 +571,7 @@
     "\n",
     "# Results:\n",
     "print(f\"Cross-Validation RMSE Scores: {cv_scores}\")  \n",
-    "print(f\"Mean Cross-Validation RMSE: {cv_scores.mean()}\")  \n"
+    "print(f\"Mean Cross-Validation RMSE: {cv_scores.mean()}\")"
    ]
   }
  ],
